[project]
name = "my-python-event-loop"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Arthur Pastel", email = "arthur.pastel@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.2.0", "freezegun>=1.5.0", "ruff>=0.4.2"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
